--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     chromadb
     langchain-chroma
     # basic ui
-    streamlit
+    gradio
     # cli and env
     typer
     python-dotenv
