--- a/setup.cfg
+++ b/setup.cfg
@@ -56,11 +56,11 @@ docs =
     mkdocstrings[python]
     mkdocs-glightbox
 dev-all =
-    eval-lab[dev, docs]
+    lm-eval-lab[dev, docs]
 
 [options.entry_points]
 console_scripts =
-    eval-lab = eval_lab.cli:app
+    lm-eval-lab = lm_eval_lab.cli:app
 
 [flake8]
 max-line-length = 120
