--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ line-length = 120
 
 [tool.isort]
 known_first_party = [
-    "eval-lab"
+    "lm-eval-lab"
 ]
 known_third_party = [
     "langchain"
