--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,8 @@ install_requires =
     langchain
     langchain-huggingface
     llama-index
+    # inference
+    llama-cpp-python
     # evals
     ragas
     lm-eval
@@ -57,6 +59,10 @@ docs =
     mkdocs-glightbox
 dev-all =
     lm-eval-lab[dev, docs]
+packaging =
+    setuptools
+    build
+    twine
 
 [options.entry_points]
 console_scripts =
