--- a/.lab-configs/eval-config.yaml
+++ b/.lab-configs/eval-config.yaml
@@ -14,7 +14,7 @@
 
 model:
   owner: jxtngx
-  name: Llama-3.2-3B-Instruct-Q4_K_M-GGUF
+  name: Meta-Llama-3.2-1B-Instruct-Q4_K_M-GGUF
 
 evaluations:
   human: true
