--- a/.lab-configs/lab-config.yaml
+++ b/.lab-configs/lab-config.yaml
@@ -27,3 +27,8 @@ logger:
   project_name: lm-evals
 
 seed: 42
+
+model:
+  owner: jxtngx
+  name: Meta-Llama-3.2-1B-Instruct-Q4_K_M-GGUF
+  filename: "*q4_k_m.gguf"
