--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,9 @@ line-length = 120
 known_first_party = [
     "lm_eval_lab"
 ]
+known_third_party = [
+    "llama_cpp"
+]
 profile = "black"
 line_length = 120
 force_sort_within_sections = "False"
