--- a/.lab-configs/lab-config.yaml
+++ b/.lab-configs/lab-config.yaml
@@ -19,7 +19,7 @@ data:
   cache_dir: ${oc.env:PWD}/data
 
 models:
-  cache_dir: ${oc.env:PWD}/.models
+  dir: ${oc.env:PWD}/.models
 
 logs: ${oc.env:PWD}/logs
 
