add wandb and weave

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ dependencies = [
     "langsmith",
     "langchain",
     "langchain-huggingface",
+    "weave",
+    "wandb",
     "llama-index",
     "ragas",
     "lm-eval",
